--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,11 +1,11 @@
-body{
-  font-family:Arial, Helvetica, sans-serif
+body {
+  font-family: Arial, Helvetica, sans-serif
 }
 
-.para,
-.small-para {
+.para.small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
+  font-size: 14px;
 }
 
 .small-para {
@@ -14,14 +14,15 @@ body{
 }
 
 .para {
-  font-size: 22px;
+  font-size: 24px;
+  font-weight: 800;
 }
 
-.confirm {
+.confirm.button {
   background: green;
   color: white;
   font-weight: bold;
-} 
+}
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,7 +30,7 @@ body{
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
