--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -11,15 +11,21 @@ body {
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .1);
+  display: flex;
+  justify-content: space-between;
+  /* align-content: center; */
+  padding: 8px;
 }
 
 .profile-image {
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, .5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  /* align-self: center;
+  padding: 5px; */
 }
 
 .logo {
@@ -27,6 +33,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  /* justify-self: flex-start; */
+
 }
 
 button {
@@ -35,14 +43,29 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  /* align-self: center; */
+
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  /* padding: 5px; */
+
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.left,
+.right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
