--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  ;
 }
 
 img {
@@ -23,4 +24,14 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.items {
+  display: flex;
+  justify-content: space-between;
+}
+
+.title-container {
+  display: flex;
+  justify-content: center;
 }
